<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="extensions_title">PeXtension</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="privacy_category">Privacy Indicators (Requires Restart)</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="hardware_category">Hardware</string>
    <string name="build_tweaks_summary_title">Enter here for the new world!</string>
    <string name="listview">ListView</string>
    <string name="misc_category">Misc Settings</string>
    <string name="fingerprint_category">FP Sensor</string>
    <string name="qs_category">Quick Settings</string>
    <string name="power_key">Power Button</string>
    <string name="volume_keys">Volume Buttons</string>
    <string name="lockscreen_gestures_category">LockScreen Gesture</string>
    <string name="battery_settings_title">Battery Settings</string>
    <string name="gestures_category">Gestures Customizations</string>
    <string name="extensions_dialog_title">Help us help you!</string>
    <string name="extensions_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="extensions_dialog_toast">READ THE WHOLE THING!</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="statusbar_clock_chip_title">Background chip</string>
    <string name="statusbar_clock_chip_summary">Display accented chip behind the clock</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_percent" translatable="false">\u0025</string>
    <string name="unit_pixels" translatable="false">dp</string>
    <string name="unit_seconds">seconds</string>
    <string name="unit_x1000ms" translatable="false">x1000 ms</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="hide_developer_status_title">Hide developer status</string>
    <string name="hide_developer_status_summary">Hide developer status from apps</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="double_tap_sleep_gesture_title">Tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double-tap anywhere on the status bar to put the device to sleep</string>
    <string name="lockscreen_tweaks_category_title">What to do</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep on lockscreen</string>
    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="volte_switch_title">VoLTE icon</string>
    <string name="volte_switch_summary">Display VoLTE icon</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
    <string name="volte_icon_asus">VoLTE Asus Icon</string>
    <string name="volte_icon_vo">Vo Only Icon</string>
    <string name="volte_icon_volte">VoLTE Icon</string>
    <string name="volte_icon_oos">VoLTE OOS Icon</string>
    <string name="volte_icon_hd">HD Icon</string>
    <string name="volte_icon_hd2">HD CAF Icon</string>
    <string name="volte_icon_miui">MIUI 11 Icon</string>
    <string name="volte_icon_emui">EMUI Icon</string>
    <string name="volte_icon_margaritov">HD Filled Icon</string>
    <string name="volte_icon_margaritov2">Margaritov VoLTE Icon</string>
    <string name="volte_icon_vivo">Vivo Icon</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_enabled">VoWiFi icon enabled</string>
    <string name="vowifi_icon_disabled">VoWiFi icon disabled</string>
    <string name="vowifi_icon_enabled_volte_disabled">VoWiFi instead of VoLTE icon</string>
    <string name="vowifi_icon_style_title">VoWiFi icon style</string>
    <string name="vowifi_icon_default">Default Icon</string>
    <string name="vowifi_icon_emui">EMUI Icon</string>
    <string name="vowifi_icon_asus">Asus Icon</string>
    <string name="vowifi_icon_oneplus">OOS Icon</string>
    <string name="vowifi_icon_moto">Motorola Icon</string>
    <string name="vowifi_icon_simple1">Simple1 Icon</string>
    <string name="vowifi_icon_simple2">Simple2 Icon</string>
    <string name="vowifi_icon_simple3">Simple3 Icon</string>
    <string name="vowifi_icon_vivo">Vivo Icon</string>
    <string name="vowifi_icon_margaritov">Margaritov Icon</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="fprint_sucess_vib_title">Fingerprint success vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on failed fingerprint authentication</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="quick_pulldown_none">Disabled</string>
    <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
    <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
    <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="torch_power_button_gesture_dt">Double press power button (Disables Quickly open camera feature and adds 170ms wakeup delay)</string>
    <string name="torch_power_button_gesture_lp">Long press power button</string>
    <string name="qqs_brightness_slider_title">QQS brightness slider</string>
    <string name="qs_brightness_slider_hide">Hide</string>
    <string name="qs_brightness_slider_bottom">Bottom</string>
    <string name="qs_brightness_slider_top">Top</string>
    <string name="qs_show_brightness_slider_title">Brightness slider</string>
    <string name="qs_show_brightness_slider_never">Never show</string>
    <string name="qs_show_brightness_slider_expanded">Show when expanded</string>
    <string name="qs_show_brightness_slider_always">Show always</string>
    <string name="qs_show_brightness_slider_not_expanded">Show when not expanded</string>
    <string name="qs_brightness_slider_position_title">Position</string>
    <string name="qs_brightness_slider_position_top">Top</string>
    <string name="qs_brightness_slider_position_bottom">Bottom</string>
    <string name="default_string">Default</string>
    <string name="qs_show_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_show_auto_brightness_summary">Show toggle for auto brightness near the slider</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="gestures_title">Nav Bar Gesture Customisations</string>
    <string name="gestures_summary">Take Your Pill</string>
    <string name="lockscreen_media_blur_title">Media art blur level</string>
    <string name="show_lockscreen_media_art_title">Show media art</string>
    <string name="lockscreen_media_art_options_title">Lockscreen media art</string>
    <string name="udfps_category">Udfps</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="use_old_mobiletype_title">Small mobile type icon</string>
    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_advanced">Advanced reboot options</string>
    <string name="powermenu_restart">Restart</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="theme_customization_category">Theming</string>
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <string name="theme_customization_font_title">Headline / Body font</string>
    <string name="theme_customization_font_summary">Set system font style</string>
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>
    <string name="theme_customization_signal_icon_title">Signal icon style</string>
    <string name="theme_customization_signal_icon_summary">Set custom signal icon style</string>
    <string name="theme_customization_wifi_icon_title">WiFi icon style</string>
    <string name="theme_customization_wifi_icon_summary">Set custom wifi icon style</string>
    <string name="theme_customization_lock_clock_title">Lockscreen clock font</string>
    <string name="theme_customization_lock_clock_summary">Set LS clock font style</string>
    <string name="window_ignore_secure_title">Ignore window secure flags</string>
    <string name="window_ignore_secure_summary">Remove screenshot / screenrecord limits for all applications</string>
    <string name="window_ignore_secure_warning">This can be convenient in some cases but may lead to privacy leaks. After changing this toggle, you may need to restart applications for the change to take effect.</string>
    <string name="radio_info_title">Radio info</string>
</resources>