<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
        android:key="system_settings"
        android:title="@string/system_category">

<PreferenceCategory
        android:title="@string/theme_customization_category">

        <Preference
            android:key="android.theme.customization.fonts"
            android:title="@string/theme_customization_font_title"
            android:summary="@string/theme_customization_font_summary"
            android:fragment="org.pixelextended.pextension.settings.fragments.FontsPicker" />

        <Preference
            android:key="android.theme.customization.icon_pack"
            android:title="@string/theme_customization_icon_pack_title"
            android:summary="@string/theme_customization_icon_pack_summary"
            android:fragment="org.pixelextended.pextension.settings.fragments.StatusBarIcons" />

        <Preference
            android:key="android.theme.customization.adaptive_icon_shape"
            android:title="@string/theme_customization_icon_shape_title"
            android:summary="@string/theme_customization_icon_shape_summary"
            android:fragment="org.pixelextended.pextension.settings.fragments.IconShapes" />

        <Preference
            android:key="android.theme.customization.lockscreen_clock_font"
            android:title="@string/theme_customization_lock_clock_title"
            android:summary="@string/theme_customization_lock_clock_summary"
            android:fragment="org.pixelextended.pextension.settings.fragments.LockClockFonts" />

        <Preference
            android:key="android.theme.customization.signal_icon"
            android:title="@string/theme_customization_signal_icon_title"
            android:summary="@string/theme_customization_signal_icon_summary"
            android:fragment="org.pixelextended.pextension.settings.fragments.SignalIcons" />

        <Preference
            android:key="android.theme.customization.wifi_icon"
            android:title="@string/theme_customization_wifi_icon_title"
            android:summary="@string/theme_customization_wifi_icon_summary"
            android:fragment="org.pixelextended.pextension.settings.fragments.WifiIcons" />

       </PreferenceCategory>

<PreferenceCategory
        android:title="@string/misc_category">
  
  <Preference
            android:title="@string/radio_info_title"
            android:key="radio_info_settings">
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.settings.RadioInfo" />
    </Preference>

       <!-- In-call feedback -->
    <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="incall_feeedback_vibrate"
        android:title="@string/incall_feeedback_vibrate_title"
        android:defaultValue="false"
        settings:controller="com.android.settings.sound.IncallFeedbackPreferenceController" />

    <com.android.settings.custom.preference.SecureSettingSwitchPreference
        android:key="window_ignore_secure"
        android:title="@string/window_ignore_secure_title"
        android:summary="@string/window_ignore_secure_summary"
        android:defaultValue="false" />

    <com.android.settingslib.widget.FooterPreference
        android:key="window_ignore_secure_footer"
        android:title="@string/window_ignore_secure_warning"
        android:selectable="false"
        settings:searchable="false"/>
  
  <com.android.settings.custom.preference.GlobalSettingSwitchPreference
            android:key="wake_when_plugged_or_unplugged"
            android:title="@string/wake_when_plugged_or_unplugged_title"
            android:summary="@string/wake_when_plugged_or_unplugged_summary"
            android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />
  
  <!-- Hide developer and adb status  -->
	<Preference
           android:key="hide_developer_status_settings"
           android:icon="@drawable/ic_window_secure"
           android:title="@string/hide_developer_status_title"
           android:summary="@string/hide_developer_status_summary"
           android:fragment="org.pixelextended.pextension.fragments.HideDeveloperStatusSettings"
          settings:controller="org.pixelextended.pextension.fragments.HideDeveloperStatusPreferenceController" />

</PreferenceCategory>
</PreferenceScreen>
